--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <a href="">Projetos</a>
                 <a href="">Sobre</a>
                 <a href="">Contatos</a>
-                <a id="button-downloadCV" href="" lang="en">Download CV</a>
+                <!--<a id="button-downloadCV" href="" lang="en">Download CV</a>-->
+                <a button class="button-downloadCV" href="" lang="en">Download CV</button></a>
             </nav>
         </header>
     </body>
