--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
         <header>
             <img id="logo" src="assets/img/1208903.png">
             <nav>
-                <a href="" lang="en">Skills</a> 
-                <a href="">Projetos</a>
-                <a href="">Sobre</a>
-                <a href="">Contatos</a>
+                <a class="effect" href="" lang="en">Skills</a> 
+                <a class="effect" href="">Projetos</a>
+                <a class="effect" href="">Sobre</a>
+                <a class="effect" href="">Contatos</a>
                 <a button class="button-downloadCV" href="" lang="en">Download CV</button></a>
             </nav>
         </header>
     </body>
 </html>
-
