create title and subtitle

--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
                 <a button class="button-downloadCV" href="" lang="en">Download CV</button></a>
             </nav>
         </header>
+        
+        <div class="background-foto">
+            <div class="box">
+                <h1 id="Title">Renan Januário</h1>
+                <h2 id="SubTitle">FrontEnd Developer</h2>
+            </div>
+        </div>
+        
     </body>
 </html>
