create button download CV

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 <h2 id="SubTitle">FrontEnd Developer</h2>
             </div>
             
-            <div class="box-downloadCV2">
-                <p id="text-DownloadCV2">Download CV</p>
+                <a button class="button-downloadCV2" href="" lang="en">Download CV</a>
             </div>
 
         </article> 
