--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Quantico&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/components/title.css">
     </head>
     <body>
         <header>
@@ -23,8 +24,8 @@
         
         <main>  
             <div class="box">
-                <h1 id="Title">Renan Januário</h1>
-                <h2 id="SubTitle">FrontEnd Developer</h2>
+                <h1>Renan Januário</h1>
+                <h2>FrontEnd Developer</h2>
             </div>
 
             <a button class="buttonmain-downloadCV" href="" lang="en">Download CV</button></a>      
