--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/components/title.css">
+        <link rel="stylesheet" href="css/components/subtitle.css">
     </head>
 
     <body>
