create the Section Skills

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/components/action.css">
         <link rel="stylesheet" href="css/components/header.css">
         <link rel="stylesheet" href="css/components/banner.css"> 
+        <link rel="stylesheet" href="css/components/skills.css">
     </head>
 
     <body>
@@ -41,6 +42,44 @@
                     <a button class="button" href="">Contatos</a> 
                 </div>
             </div>    
+        </section>
+
+        <section class="sectionSkills">
+            <div>
+                <h2 class="skills">Skills</h2>
+            </div>
+
+            <div class="ico-html">
+                <img src="assets/img/ico_html5.png" alt="icone HTML5">
+            </div>
+
+            <div class="ico-css">
+                <img src="assets/img/ico_css3.png" alt="icone CSS">
+            </div>
+
+            <div class="ico-js">
+                <img src="assets/img/ico_js.png" alt="icone JavaScrypt">
+            </div>
+
+            <div class="ico-react">
+                <img src="assets/img/ico_react.png" alt="icone React">
+            </div>
+
+            <div class="ico-nodejs">
+                <img src="assets/img/ico_nodejs.png" alt="icone NodeJS">
+            </div>
+
+            <div class="ico-tdd">
+                <img src="assets/img/ico_tdd.png" alt="icone TDD">
+            </div>
+
+            <div class="ico-restapi">
+                <img src="assets/img/ico_restapi.png" alt="icone JavaScrypt">
+            </div>
+
+            <div class="ico-ux">
+                <img src="assets/img/ico_ux.png" alt="icone UX">
+            </div>
         </section>
          
     </body>
