--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/components/action.css">
         <link rel="stylesheet" href="css/components/header.css">
         <link rel="stylesheet" href="css/components/banner.css"> 
-        <link rel="stylesheet" href="css/components/skills.css">
+        <link rel="stylesheet" href="css/components/sectionSkills.css">
     </head>
 
     <body>
