--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
             <div class="ico-html">
                 <img src="assets/img/ico_html5.png" alt="icone HTML5">
+                <h3 class="text-html">HTML</h3>
             </div>
 
             <div class="ico-css">
