--- a/index.html
+++ b/index.html
@@ -56,30 +56,37 @@
 
             <div class="ico-css">
                 <img src="assets/img/ico_css3.png" alt="icone CSS">
+                <h3 class="text-html">CSS</h3>
             </div>
 
             <div class="ico-js">
                 <img src="assets/img/ico_js.png" alt="icone JavaScrypt">
+                <h3 class="text-html">JavaScrypt</h3>
             </div>
 
             <div class="ico-react">
                 <img src="assets/img/ico_react.png" alt="icone React">
+                <h3 class="text-html">React</h3>
             </div>
 
             <div class="ico-nodejs">
                 <img src="assets/img/ico_nodejs.png" alt="icone NodeJS">
+                <h3 class="text-html">NodeJS</h3>
             </div>
 
             <div class="ico-tdd">
                 <img src="assets/img/ico_tdd.png" alt="icone TDD">
+                <h3 class="text-html">TDD</h3>
             </div>
 
             <div class="ico-restapi">
-                <img src="assets/img/ico_restapi.png" alt="icone JavaScrypt">
+                <img src="assets/img/ico_restapi.png" alt="icone REST API">
+                <h3 class="text-html">Rest API</h3>
             </div>
 
             <div class="ico-ux">
                 <img src="assets/img/ico_ux.png" alt="icone UX">
+                <h3 class="text-html">UX</h3>
             </div>
         </section>
          
