create the component section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <link rel="stylesheet" href="css/components/button.css">
         <link rel="stylesheet" href="css/components/action.css">
         <link rel="stylesheet" href="css/components/header.css">
-        <link rel="stylesheet" href="css/components/banner.css"> 
-        <link rel="stylesheet" href="css/components/sectionSkills.css">
+        <link rel="stylesheet" href="css/components/banner.css">
+        <link rel="stylesheet" href="css/components/section.css"> 
     </head>
  
     <body>
@@ -44,51 +44,10 @@
             </div>    
         </section>
 
-        <section class="sectionSkills">
-            <div>
-                <h2 class="skills">Skills</h2>
-            </div>
-
-            <div class="ico-html">
-                <img src="assets/img/ico_html5.png" alt="icone HTML5">
-                <h3 class="text-html">HTML</h3>
-            </div>
-
-            <div class="ico-css">
-                <img src="assets/img/ico_css3.png" alt="icone CSS">
-                <h3 class="text-html">CSS</h3>
-            </div>
-
-            <div class="ico-js">
-                <img src="assets/img/ico_js.png" alt="icone JavaScrypt">
-                <h3 class="text-html">JavaScrypt</h3>
-            </div>
-
-            <div class="ico-react">
-                <img src="assets/img/ico_react.png" alt="icone React">
-                <h3 class="text-html">React</h3>
-            </div>
-
-            <div class="ico-nodejs">
-                <img src="assets/img/ico_nodejs.png" alt="icone NodeJS">
-                <h3 class="text-html">NodeJS</h3>
-            </div>
-
-            <div class="ico-tdd">
-                <img src="assets/img/ico_tdd.png" alt="icone TDD">
-                <h3 class="text-html">TDD</h3>
-            </div>
-
-            <div class="ico-restapi">
-                <img src="assets/img/ico_restapi.png" alt="icone REST API">
-                <h3 class="text-html">Rest API</h3>
-            </div>
-
-            <div class="ico-ux">
-                <img src="assets/img/ico_ux.png" alt="icone UX">
-                <h3 class="text-html">UX</h3>
-            </div>
+        <section class="section">
+            <h2 class="title -second">Skills</h2>
         </section>
+    
          
     </body>
 
