Create the project cards components

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="css/components/skill-tec.css">
         <link rel="stylesheet" href="css/components/wrapper-skill.css">
         <link rel="stylesheet" href="css/components/progress-bar.css">
+        <link rel="stylesheet" href="css/components/project-section.css">
+        <link rel="stylesheet" href="css/components/project-cards.css">
     </head>
  
     <body>
@@ -114,7 +116,30 @@
                     </div>
                 </article>
             </div> 
+        </section> 
+        
+        <section class="project-section">
+            <h2 class="main-title -three">Projetos</h2>
+            <div class="project-cards">
+                <div class="project-cards">
+                    <a class="actioncard" href="">
+                        <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
+                    </a>
+                </div>
 
-        </section>        
+                <div class="project-cards">
+                    <a class="actioncard" href="">
+                        <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
+                    </a>    
+                </div>
+
+                <div class="project-cards">
+                    <a class="actioncard" href="">
+                        <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
+                    </a>    
+                </div>
+            </div>    
+        </section>
+
     </body>
 </html>
