create contact link via whatsapp

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="action" href="" lang="en">Skills</a> 
                 <a class="action" href="">Projetos</a>
                 <a class="action" href="">Sobre</a>
-                <a class="action" href="">Contatos</a>
+                <a class="action" href="https://wa.me/14996262040">Contatos</a>
                 <a button class="button" href="" lang="en">Download CV</button></a>        
             </nav>
         </header>
@@ -43,7 +43,7 @@
                 
                 <div class="navigation">
                     <a button class="button" href="" lang="en">Download CV</a>
-                    <a button class="button" href="">Contatos</a> 
+                    <a button class="button" href="https://wa.me/14996262040">Contatos</a> 
                 </div>
             </div>    
         </section>
