--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 
                 <div class="navigation">
                     <a button class="button" href="" lang="en">Download CV</a>
-                    <a button class="button" href="https://wa.me/14996262040">Contatos</a> 
+                    <a button class="button" href="https://wa.me/+5514996262040">Contatos</a> 
                 </div>
             </div>    
         </section>
