--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <link rel="stylesheet" href="css/components/skill-tec.css">
         <link rel="stylesheet" href="css/components/wrapper-skill.css">
         <link rel="stylesheet" href="css/components/progress-bar.css">
-        <link rel="stylesheet" href="css/components/project-section.css">
-        <link rel="stylesheet" href="css/components/project-cards.css">
+        <link rel="stylesheet" href="css/components/card-project.css">
+        <link rel="stylesheet" href="css/components/wrapper-card.css">
     </head>
  
     <body>
@@ -29,7 +29,7 @@
                 <a class="action" href="" lang="en">Skills</a> 
                 <a class="action" href="">Projetos</a>
                 <a class="action" href="">Sobre</a>
-                <a class="action" href="https://wa.me/14996262040">Contatos</a>
+                <a class="action" href="https://wa.me/+5514996262040">Contatos</a>
                 <a button class="button" href="" lang="en">Download CV</button></a>        
             </nav>
         </header>
@@ -116,30 +116,48 @@
                     </div>
                 </article>
             </div> 
-        </section> 
-        
-        <section class="project-section">
+        </section>
+     
+        <section class="section -bgBlack -bdFirst">
             <h2 class="main-title -three">Projetos</h2>
-            <div class="project-cards">
-                <div class="project-cards">
-                    <a class="actioncard" href="">
-                        <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
-                    </a>
-                </div>
 
-                <div class="project-cards">
-                    <a class="actioncard" href="">
-                        <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
-                    </a>    
-                </div>
-
-                <div class="project-cards">
-                    <a class="actioncard" href="">
-                        <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
-                    </a>    
-                </div>
+            <div class="wrapper-card">
+                <figure class="card-project">
+                    <img class="logo" src="assets/img/ico_development.png" alt="logo desenvolvimento">
+                </figure>
+                <figure class="card-project -blue">
+                    <img class="logo" src="assets/img/ico_development.png" alt="logo desenvolvimento">
+                </figure>
+                <figure class="card-project">
+                    <img class="logo" src="assets/img/ico_development.png" alt="logo desenvolvimento">
+                </figure>
             </div>    
         </section>
 
     </body>
 </html>
+
+
+
+<!--
+<h2 class="main-title -three">Projetos</h2>
+<div class="project-cards">
+    <div class="project-cards">
+        <a class="actioncard" href="">
+            <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
+        </a>
+    </div>
+
+    <div class="project-cards">
+        <a class="actioncard" href="">
+            <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
+        </a>    
+    </div>
+
+    <div class="project-cards">
+        <a class="actioncard" href="">
+            <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
+        </a>    
+    </div>
+</div>  
+-->  
