add the liks to card project

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                         <progress class="progress-bar" max="100" value="20">20%</progress>
                     </div>
                 </article>
-
                 <article class="skill-tec">
                     <img class="icon" src="assets/img/ico_css3.png" alt="Icone CSS">
                     <div class="right">
@@ -67,7 +66,6 @@
                         <progress class="progress-bar" max="100" value="20">20%</progress>
                     </div>
                 </article>
-
                 <article class="skill-tec">
                     <img class="icon" src="assets/img/ico_js.png" alt="Icone JavaScript">
                     <div class="right">
@@ -75,7 +73,6 @@
                         <progress class="progress-bar" max="100" value="1">1%</progress>
                     </div>
                 </article>
-
                 <article class="skill-tec">
                     <img class="icon" src="assets/img/ico_react.png" alt="Icone React">
                     <div class="right">
@@ -83,7 +80,6 @@
                         <progress class="progress-bar" max="100" value="1">1%</progress>
                     </div>
                 </article>
-
                 <article class="skill-tec">
                     <img class="icon" src="assets/img/ico_nodejs.png" alt="Icone NodeJS">
                     <div class="right">
@@ -91,7 +87,6 @@
                         <progress class="progress-bar" max="100" value="1">1%</progress>
                     </div>
                 </article>
-
                 <article class="skill-tec">
                     <img class="icon" src="assets/img/ico_tdd.png" alt="Icone TDD">
                     <div class="right">
@@ -99,7 +94,6 @@
                         <progress class="progress-bar" max="100" value="1">1%</progress>
                     </div>
                 </article>
-
                 <article class="skill-tec">
                     <img class="icon" src="assets/img/ico_restapi.png" alt="Icone Rest API">
                     <div class="right">
@@ -122,15 +116,21 @@
             <h2 class="main-title -three">Projetos</h2>
 
             <div class="wrapper-card">
-                <figure class="card-project">
-                    <img class="logo" src="assets/img/ico_development.png" alt="logo desenvolvimento">
-                </figure>
-                <figure class="card-project -blue">
-                    <img class="logo" src="assets/img/ico_development.png" alt="logo desenvolvimento">
-                </figure>
-                <figure class="card-project">
-                    <img class="logo" src="assets/img/ico_development.png" alt="logo desenvolvimento">
-                </figure>
+                <a href="">
+                    <figure class="card-project">
+                        <img class="logo" src="assets/img/ico_development.png" alt="logo desenvolvimento">
+                    </figure>
+                </a>
+                <a href="">
+                    <figure class="card-project -blue">
+                        <img class="logo" src="assets/img/ico_development.png" alt="logo desenvolvimento">
+                    </figure>
+                </a>    
+                <a href="https://renanjdev.github.io/html-css-feliz/">    
+                    <figure class="card-project">
+                        <img class="logo" src="assets/img/ico_development.png" alt="logo desenvolvimento">
+                    </figure>
+                </a>    
             </div>    
         </section>
 
@@ -139,25 +139,3 @@
 
 
 
-<!--
-<h2 class="main-title -three">Projetos</h2>
-<div class="project-cards">
-    <div class="project-cards">
-        <a class="actioncard" href="">
-            <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
-        </a>
-    </div>
-
-    <div class="project-cards">
-        <a class="actioncard" href="">
-            <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
-        </a>    
-    </div>
-
-    <div class="project-cards">
-        <a class="actioncard" href="">
-            <img class="card" src="assets/img/ico_development.png" alt="em desenvolvimento">
-        </a>    
-    </div>
-</div>  
--->  
