change action to main-action

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>RenanJ - Portifólio Feliz</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +12,7 @@
         <link rel="stylesheet" href="css/components/subtitle.css">
         <link rel="stylesheet" href="css/components/box.css">
         <link rel="stylesheet" href="css/components/button.css">
-        <link rel="stylesheet" href="css/components/action.css">
+        <link rel="stylesheet" href="css/components/main-action.css">
         <link rel="stylesheet" href="css/components/header.css">
         <link rel="stylesheet" href="css/components/banner.css">
         <link rel="stylesheet" href="css/components/section.css"> 
@@ -26,10 +27,10 @@
         <header class="header">
             <img src="assets/img/1208903.png" alt="logo da pagina">
             <nav>      
-                <a class="action" href="" lang="en">Skills</a> 
-                <a class="action" href="">Projetos</a>
-                <a class="action" href="">Sobre</a>
-                <a class="action" href="https://wa.me/+5514996262040">Contatos</a>
+                <a class="main-action" href="" lang="en">Skills</a> 
+                <a class="main-action" href="">Projetos</a>
+                <a class="main-action" href="">Sobre</a>
+                <a class="main-action" href="https://wa.me/+5514996262040">Contatos</a>
                 <a button class="button" href="" lang="en">Download CV</button></a>        
             </nav>
         </header>
