--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/components/button.css">
         <link rel="stylesheet" href="css/components/main-action.css">
         <link rel="stylesheet" href="css/components/header.css">
-        <link rel="stylesheet" href="css/components/banner.css">
+        <link rel="stylesheet" href="css/components/main-banner.css">
         <link rel="stylesheet" href="css/components/section.css"> 
         <link rel="stylesheet" href="css/components/skill-tec.css">
         <link rel="stylesheet" href="css/components/wrapper-skill.css">
@@ -35,7 +35,7 @@
             </nav>
         </header>
         
-        <section class="banner"> 
+        <section class="main-banner"> 
             <div class="wrapper">
                 <div class="box">
                     <h1 class="main-title">Renan Januário</h1>
