--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/components/main-title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
-        <link rel="stylesheet" href="css/components/box.css">
+        <link rel="stylesheet" href="css/components/main-box.css">
         <link rel="stylesheet" href="css/components/button.css">
         <link rel="stylesheet" href="css/components/main-action.css">
         <link rel="stylesheet" href="css/components/header.css">
@@ -37,7 +37,7 @@
         
         <section class="main-banner"> 
             <div class="wrapper">
-                <div class="box">
+                <div class="main-box">
                     <h1 class="main-title">Renan Januário</h1>
                     <h2 class="subtitle">FrontEnd Developer</h2>
                 </div>
