--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/components/main-title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
         <link rel="stylesheet" href="css/components/main-box.css">
-        <link rel="stylesheet" href="css/components/button.css">
+        <link rel="stylesheet" href="css/components/main-button.css">
         <link rel="stylesheet" href="css/components/main-action.css">
         <link rel="stylesheet" href="css/components/header.css">
         <link rel="stylesheet" href="css/components/main-banner.css">
@@ -31,7 +31,7 @@
                 <a class="main-action" href="">Projetos</a>
                 <a class="main-action" href="">Sobre</a>
                 <a class="main-action" href="https://wa.me/+5514996262040">Contatos</a>
-                <a button class="button" href="" lang="en">Download CV</button></a>        
+                <a class="main-button" href="" lang="en">Download CV</a>        
             </nav>
         </header>
         
@@ -43,8 +43,8 @@
                 </div>
                 
                 <div class="navigation">
-                    <a button class="button" href="" lang="en">Download CV</a>
-                    <a button class="button" href="https://wa.me/+5514996262040">Contatos</a> 
+                    <a class="main-button -second" href="" lang="en">Download CV</a>
+                    <a class="main-button -second" href="https://wa.me/+5514996262040">Contatos</a> 
                 </div>
             </div>    
         </section>
