--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/components/main-box.css">
         <link rel="stylesheet" href="css/components/main-button.css">
         <link rel="stylesheet" href="css/components/main-action.css">
-        <link rel="stylesheet" href="css/components/header.css">
+        <link rel="stylesheet" href="css/components/main-header.css">
         <link rel="stylesheet" href="css/components/main-banner.css">
         <link rel="stylesheet" href="css/components/section.css"> 
         <link rel="stylesheet" href="css/components/skill-tec.css">
@@ -24,7 +24,7 @@
     </head>
  
     <body>
-        <header class="header">
+        <header class="main-header">
             <img src="assets/img/1208903.png" alt="logo da pagina">
             <nav>      
                 <a class="main-action" href="" lang="en">Skills</a> 
