change sectio to main-section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/components/main-action.css">
         <link rel="stylesheet" href="css/components/main-header.css">
         <link rel="stylesheet" href="css/components/main-banner.css">
-        <link rel="stylesheet" href="css/components/section.css"> 
+        <link rel="stylesheet" href="css/components/main-section.css"> 
         <link rel="stylesheet" href="css/components/skill-tec.css">
         <link rel="stylesheet" href="css/components/wrapper-skill.css">
         <link rel="stylesheet" href="css/components/progress-bar.css">
@@ -49,7 +49,7 @@
             </div>    
         </section>
 
-        <section class="section">
+        <section class="main-section">
             <h2 class="main-title -second">Skills</h2>
 
             <div class="wrapper-skill">   
@@ -113,7 +113,7 @@
             </div> 
         </section>
      
-        <section class="section -bgBlack -bdFirst">
+        <section class="main-section -bgBlack -bdFirst">
             <h2 class="main-title -three">Projetos</h2>
 
             <div class="wrapper-card">
