--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Quantico&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/components/main-title.css">
-        <link rel="stylesheet" href="css/components/subtitle.css">
+        <link rel="stylesheet" href="css/components/main-subtitle.css">
         <link rel="stylesheet" href="css/components/main-box.css">
         <link rel="stylesheet" href="css/components/main-button.css">
         <link rel="stylesheet" href="css/components/main-action.css">
@@ -39,7 +39,7 @@
             <div class="wrapper">
                 <div class="main-box">
                     <h1 class="main-title">Renan Januário</h1>
-                    <h2 class="subtitle">FrontEnd Developer</h2>
+                    <h2 class="main-subtitle">FrontEnd Developer</h2>
                 </div>
                 
                 <div class="navigation">
