change banner to main-banner, header to main-header, section to main-section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <link rel="stylesheet" href="css/components/progress-bar.css">
         <link rel="stylesheet" href="css/components/card-project.css">
         <link rel="stylesheet" href="css/components/wrapper-card.css">
+        <link rel="stylesheet" href="css/components/main-description.css">
+        <link rel="stylesheet" href="css/components/button-arrow.css">
     </head>
  
     <body>
@@ -134,6 +136,22 @@
                 </a>    
             </div>    
         </section>
+        
+        <section class="main-section -bdBlack -bgSecond">
+            <h2 class="main-title -three">Sobre</h2>
+
+            <p class="main-description">Aos 32 anos de idade resolvi migrar para área de TI, mais precisamente para trabalhar com Desenvolvimento Front-End. Sou muito critativo e tenho muita vontade de aprender, quando me interesso por um assunto me aprofundo até dominá-lo, o que me permite aprender nos detalhes. Comecei através do curso de HTML&CSS Feliz do Marco Bruno e esse é um Portifólio-Projeto desenvolvido durante o curso. 
+            </p>
+
+            <button class="button-arrow -right">Voltar</button>
+            <button class="button-arrow -left">Avançar</button>
+
+        </section>
+
+
+
+
+
     </body>
 </html>
 
