create the button-arrow and update the main-banner main-box main-button wrapper-card

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <link rel="stylesheet" href="css/components/wrapper-card.css">
         <link rel="stylesheet" href="css/components/main-description.css">
         <link rel="stylesheet" href="css/components/button-arrow.css">
+        <link rel="stylesheet" href="css/components/node-card.css">
     </head>
  
     <body>
@@ -142,9 +143,19 @@
 
             <p class="main-description">Aos 32 anos de idade resolvi migrar para área de TI, mais precisamente para trabalhar com Desenvolvimento Front-End. Sou muito critativo e tenho muita vontade de aprender, quando me interesso por um assunto me aprofundo até dominá-lo, o que me permite aprender nos detalhes. Comecei através do curso de HTML&CSS Feliz do Marco Bruno e esse é um Portifólio-Projeto desenvolvido durante o curso. 
             </p>
+            
+            <button class="button-arrow -left"><span class="content">Avançar</span></button>
 
-            <button class="button-arrow -right">Voltar</button>
-            <button class="button-arrow -left">Avançar</button>
+            <figure class="node-card">
+                <figcaption class="title">2012</figcaption>
+                <div class="logo">   
+                    <img src="assets/img/logo_empresa1.png" alt="Logo Empresa 1" class="logo">
+                </div>     
+            </figure>
+
+            <button class="button-arrow -right"><span class="content">Voltar</span></button>
+
+
 
         </section>
 
