update code node-card and main-description

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <section class="main-section -bdBlack -bgSecond">
             <h2 class="main-title -three">Sobre</h2>
 
-            <p class="main-description">Aos 32 anos de idade resolvi migrar para área de TI, mais precisamente para trabalhar com Desenvolvimento Front-End. Sou muito critativo e tenho muita vontade de aprender, quando me interesso por um assunto me aprofundo até dominá-lo, o que me permite aprender nos detalhes. Comecei através do curso de HTML&CSS Feliz do Marco Bruno e esse é um Portifólio-Projeto desenvolvido durante o curso. 
+            <p class="main-description">Aos 32 anos de idade resolvi migrar para área de TI, mais precisamente para trabalhar com Desenvolvimento Front-End. Sou muito criativo e tenho muita vontade de aprender, quando me interesso por algum assunto me dedico até dominá-lo, isso sempre me permitiu ir mais além e aprender nos detalhes. Comecei através do curso de HTML&CSS Feliz do Marco Bruno e esse é um Portifólio-Projeto que estamos desenvolvendo durante o curso. 
             </p>
             
             <button class="button-arrow -left"><span class="content">Avançar</span></button>
