create the button-arrow

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <link rel="stylesheet" href="css/components/main-description.css">
         <link rel="stylesheet" href="css/components/button-arrow.css">
         <link rel="stylesheet" href="css/components/node-card.css">
+        <link rel="stylesheet" href="css/components/main-carousel.css">
     </head>
+
  
     <body>
         <header class="main-header">
@@ -141,19 +143,46 @@
         <section class="main-section -bdBlack -bgSecond">
             <h2 class="main-title -three">Sobre</h2>
 
+            <section class="main-carousel">
+                <button class="button-arrow -left"><span class="content">Avançar</span></button>
+
+                <figure class="node-card">
+                    <figcaption class="title">2012</figcaption>
+                    <div class="logo">   
+                        <img src="assets/img/logo_empresa1.png" alt="Logo Empresa 1" class="logo">
+                    </div>               
+                </figure>
+                <figure class="node-card">
+                    <figcaption class="title">2013</figcaption>
+                    <div class="logo -first">   
+                        <img src="assets/img/logo_empresa2.png" alt="Logo Empresa 1" class="logo">
+                    </div>               
+                </figure>
+                <figure class="node-card">
+                    <figcaption class="title">2014</figcaption>
+                    <div class="logo">   
+                        <img src="assets/img/logo_empresa3.png" alt="Logo Empresa 1" class="logo">
+                    </div>               
+                </figure>
+                <figure class="node-card">
+                    <figcaption class="title">2015</figcaption>
+                    <div class="logo -first">   
+                        <img src="assets/img/logo_empresa1.png" alt="Logo Empresa 1" class="logo">
+                    </div>               
+                </figure>
+                <figure class="node-card">
+                    <figcaption class="title">2016</figcaption>
+                    <div class="logo">   
+                        <img src="assets/img/logo_empresa2.png" alt="Logo Empresa 1" class="logo">
+                    </div>               
+                </figure>
+            
+
+                <button class="button-arrow -right"><span class="content">Voltar</span></button>
+            </section>  
+
             <p class="main-description">Aos 32 anos de idade resolvi migrar para área de TI, mais precisamente para trabalhar com Desenvolvimento Front-End. Sou muito criativo e tenho muita vontade de aprender, quando me interesso por algum assunto me dedico até dominá-lo, isso sempre me permitiu ir mais além e aprender nos detalhes. Comecei através do curso de HTML&CSS Feliz do Marco Bruno e esse é um Portifólio-Projeto que estamos desenvolvendo durante o curso. 
             </p>
-            
-            <button class="button-arrow -left"><span class="content">Avançar</span></button>
-
-            <figure class="node-card">
-                <figcaption class="title">2012</figcaption>
-                <div class="logo">   
-                    <img src="assets/img/logo_empresa1.png" alt="Logo Empresa 1" class="logo">
-                </div>     
-            </figure>
-
-            <button class="button-arrow -right"><span class="content">Voltar</span></button>
 
 
 
