animate of the carousel with my first JavaScript

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="css/components/button-arrow.css">
         <link rel="stylesheet" href="css/components/node-card.css">
         <link rel="stylesheet" href="css/components/main-carousel.css">
+       
     </head>
 
  
@@ -146,37 +147,40 @@
             <section class="main-carousel">
                 <button class="button-arrow -left"><span class="content">Avançar</span></button>
 
-                <figure class="node-card">
-                    <figcaption class="title">2012</figcaption>
-                    <div class="logo">   
-                        <img src="assets/img/logo_empresa1.png" alt="Logo Empresa 1" class="logo">
-                    </div>               
-                </figure>
-                <figure class="node-card">
-                    <figcaption class="title">2013</figcaption>
-                    <div class="logo -first">   
-                        <img src="assets/img/logo_empresa2.png" alt="Logo Empresa 1" class="logo">
-                    </div>               
-                </figure>
-                <figure class="node-card">
-                    <figcaption class="title">2014</figcaption>
-                    <div class="logo">   
-                        <img src="assets/img/logo_empresa3.png" alt="Logo Empresa 1" class="logo">
-                    </div>               
-                </figure>
-                <figure class="node-card">
-                    <figcaption class="title">2015</figcaption>
-                    <div class="logo -first">   
-                        <img src="assets/img/logo_empresa1.png" alt="Logo Empresa 1" class="logo">
-                    </div>               
-                </figure>
-                <figure class="node-card">
-                    <figcaption class="title">2016</figcaption>
-                    <div class="logo">   
-                        <img src="assets/img/logo_empresa2.png" alt="Logo Empresa 1" class="logo">
-                    </div>               
-                </figure>
-            
+                <div class="items">
+                    <div class="elements">
+                        <figure class="node-card">
+                            <figcaption class="title">2012</figcaption>
+                            <div class="logo">   
+                                <img src="assets/img/logo_empresa1.png" alt="Logo Empresa 1" class="logo">
+                            </div>               
+                        </figure>
+                        <figure class="node-card">
+                            <figcaption class="title">2013</figcaption>
+                            <div class="logo -first">   
+                                <img src="assets/img/logo_empresa2.png" alt="Logo Empresa 1" class="logo">
+                            </div>               
+                        </figure>
+                        <figure class="node-card">
+                            <figcaption class="title">2014</figcaption>
+                            <div class="logo">   
+                                <img src="assets/img/logo_empresa3.png" alt="Logo Empresa 1" class="logo">
+                            </div>               
+                        </figure>
+                        <figure class="node-card">
+                            <figcaption class="title">2015</figcaption>
+                            <div class="logo -first">   
+                                <img src="assets/img/logo_empresa1.png" alt="Logo Empresa 1" class="logo">
+                            </div>               
+                        </figure>
+                        <figure class="node-card">
+                            <figcaption class="title">2016</figcaption>
+                            <div class="logo">   
+                                <img src="assets/img/logo_empresa2.png" alt="Logo Empresa 1" class="logo">
+                            </div>               
+                        </figure>
+                    </div>    
+                </div>    
 
                 <button class="button-arrow -right"><span class="content">Voltar</span></button>
             </section>  
@@ -188,9 +192,7 @@
 
         </section>
 
-
-
-
+        <script src="js/components/main-carousel.js"></script>
 
     </body>
 </html>
