create the form html

--- a/index.html
+++ b/index.html
@@ -191,6 +191,19 @@
 
         </section>
 
+        <form>
+            <label for="name">Nome</label>
+            <input id="name" type="text">
+
+            <label for="email">Email</label>
+            <input id="email" type="email">
+
+            <label for="message"></label>
+            <textarea id="message"></textarea>
+
+            <input type="submit" value="Enviar">
+        </form>
+
         <footer class="main-footer">
             <a class="action" href="https://github.com/renanjdev" target="_blank">
                 <img src="assets/img/ico_github.png" alt="GitHub Icon">
