--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="css/components/node-card.css">
         <link rel="stylesheet" href="css/components/main-carousel.css">
         <link rel="stylesheet" href="css/components/main-footer.css">
+        <link rel="stylesheet" href="css/components/main-label.css">
        
     </head>
 
@@ -192,13 +193,13 @@
         </section>
 
         <form>
-            <label for="name">Nome</label>
+            <label class="main-label" for="name">Nome</label>
             <input id="name" type="text">
 
-            <label for="email">Email</label>
+            <label class="main-label" for="email">Email</label>
             <input id="email" type="email">
 
-            <label for="message"></label>
+            <label class="main-label" for="message"></label>
             <textarea id="message"></textarea>
 
             <input type="submit" value="Enviar">
