--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <link rel="stylesheet" href="css/components/main-carousel.css">
         <link rel="stylesheet" href="css/components/main-footer.css">
         <link rel="stylesheet" href="css/components/main-label.css">
+        <link rel="stylesheet" href="css/components/main-input.css">
        
     </head>
 
@@ -194,15 +195,15 @@
 
         <form>
             <label class="main-label" for="name">Nome</label>
-            <input id="name" type="text">
+            <input class="main-input" id="name" type="text">
 
             <label class="main-label" for="email">Email</label>
-            <input id="email" type="email">
+            <input class="main-input" id="email" type="email">
 
             <label class="main-label" for="message"></label>
             <textarea id="message"></textarea>
 
-            <input type="submit" value="Enviar">
+            <input class="main-input" type="submit" value="Enviar">
         </form>
 
         <footer class="main-footer">
