create the variation for main-input

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <input class="main-input" id="email" type="email">
 
             <label class="main-label" for="message"></label>
-            <textarea id="message"></textarea>
+            <textarea class="main-input -textarea" id="message"></textarea>
 
             <input class="main-input" type="submit" value="Enviar">
         </form>
