--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <label class="main-label" for="message"></label>
             <textarea class="main-input -textarea" id="message"></textarea>
 
-            <input class="main-input" type="submit" value="Enviar">
+            <input class="main-button -full" type="submit" value="Enviar">
         </form>
 
         <footer class="main-footer">
