create the main-form component

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" href="css/components/main-footer.css">
         <link rel="stylesheet" href="css/components/main-label.css">
         <link rel="stylesheet" href="css/components/main-input.css">
+        <link rel="stylesheet" href="css/components/main-form.css">
        
     </head>
 
@@ -193,14 +194,15 @@
 
         </section>
 
-        <form>
+        
+        <form class="main-form">
             <label class="main-label" for="name">Nome</label>
             <input class="main-input" id="name" type="text">
 
             <label class="main-label" for="email">Email</label>
             <input class="main-input" id="email" type="email">
 
-            <label class="main-label" for="message"></label>
+            <label class="main-label" for="message">Mensagem</label>
             <textarea class="main-input -textarea" id="message"></textarea>
 
             <input class="main-button -full" type="submit" value="Enviar">
