--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 
         
         <form class="main-form">
+            <legend class="main-title -second">Contatos</legend>
             <label class="main-label" for="name">Nome</label>
             <input class="main-input" id="name" type="text">
 
